[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/game/game.gd" type="Script" id=1]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://asset/game/bg.png" type="Texture" id=3]
[ext_resource path="res://asset/game/pause.png" type="Texture" id=4]

[node name="game" type="Node"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
modulate = Color( 0, 0.647059, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cloud_spawn_point" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 141.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="balloon_spawn_point" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
margin_right = 162.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Score : 0
Missed : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 100.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="bg" to="." method="_on_TextureRect_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
